<resources>
    <string name="app_name">Kelime Ezberleme</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="confirm_password">Şifre Tekrar</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="save">Kaydet</string>
    <string name="welcome">Hoş Geldiniz!</string>
</resources>
